# rust_journey

./: .gitignore
.github/workflows/: rust.yml
algorithms/: Cargo.toml
algorithms/src/: main.rs  mod.rs
algorithms/src/ai/: mod.rs  perceptron_simple.rs
algorithms/src/ai/ec/: aco.rs
algorithms/src/ai/ml/: lda.rs  mod.rs
algorithms/src/ai/ml/metrics/: mod.rs
algorithms/src/calculus/: differentiation.rs  mod.rs
algorithms/src/crypto/: constants.rs  crypto.rs  des.rs  mod.rs  mono.rs  tests.rs
algorithms/src/data_structures/: data_structures.rs  graph.rs  list.rs  mod.rs  tests.rs
algorithms/src/dynamic_programming/: dynamic_programming.rs
algorithms/src/graphs/traversal/: mod.rs  preorder.rs
algorithms/src/languages/: mod.rs
algorithms/src/languages/automata/: mod.rs
algorithms/src/languages/compilers/: mod.rs
algorithms/src/math/: mod.rs
algorithms/src/math/complex/: complex.rs  mod.rs  tests.rs
algorithms/src/math/extras/: extras.rs
algorithms/src/math/matrices/: matrices.rs
algorithms/src/regression/: mod.rs
algorithms/src/sorting/: mod.rs
algorithms/src/strings/: mod.rs
branches/src/: main.rs
docs/: README.adoc
functions/: Cargo.toml
functions/src/: main.rs
leetcode/src/: main.rs
leetcode/src/solutions/: count_square_sum_triplets.rs  (+9 more)
loops/src/: main.rs
low_level_learning/arduino/: Cargo.toml
low_level_learning/raspberrypi/: Cargo.toml
rustbook/src/: constants.rs  datatypes.rs  main.rs  variables.rs
scripting/: Cargo.toml
scripting/src/: funcs.rs  main.rs  models.rs  tests.rs
variables/src/: main.rs
