[package]
name = "algorithms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bytes = "1.5.0"
chrono = "0.4.31"
clap = "4.4.6"
futures = "0.3.28"
hex = "0.4.3"
image = { version = "0.24.7", features = [] }
lazy_static = "1.4.0"
libc = "0.2.149"
log = "0.4.20"
num-bigint = "0.4.4"
num-traits = "0.2.17"
rand = "0.8.5"
regex = "1.10.0"
rust_decimal = "1.32.0"
serde = "1.0.188"
textwrap = "0.16.0"
uuid = "1.4.1"
csv = "1.3.0"
